<resources>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="you_are_not_signed_in">You are not signed in</string>
    <string name="sign_up_or_log_in_to_see_your_profile">Sign up or log in to see your profile</string>
    <string name="you_are_not_signed_in_image">You are not signed in image</string>
    <string name="profile_title">Profile</string>
    <string name="request_help">Request Help</string>
    <string name="offer_help">Offer Help</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_activities">Activities</string>
    <string name="profile_requests">Requests</string>
    <string name="profile_content">I’m a 21-year-old chorus actor who enjoys walking, baking and badminton. I currently help the elderly in my neighborhood with their groceries.</string>
    <string name="select">Select</string>
    <string name="add_organisation">Add an organisation account</string>
    <string name="profile_my_organisation">My Organisation</string>
    <string name="settings_action">Settings</string>
    <string name="select_account">Select Account</string>
    <string name="my_account">My Account</string>
    <string name="fightpandemics_app_v1_2">FightPandemics App V1.2</string>
    <string name="join_now">Join now or sign in to get started</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="support">Support</string>
    <string name="feedback">Feedback</string>
    <string name="update_public_profile">Update public profile</string>
    <string name="update_account_information">Update account information</string>
    <string name="i_am_here_to">I am here to ...</string>
    <string name="donations">Donations</string>
    <string name="information">Information</string>
    <string name="other_help">Other Help</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="organisation_account">Organisation Account</string>
    <string name="type">Type</string>
    <string name="industry">Industry</string>
    <string name="we_are_here_to">We are here to...</string>
    <string name="we_are_here_to_offer">We are here to offer:</string>
    <string name="we_are_here_to_request">We are here to request:</string>
    <string name="volunteers">Volunteers</string>
    <string name="staff">Staff</string>
    <string name="resources_tools">Resources/Tools</string>
    <string name="other">Other</string>
    <string name="please_type">Please type</string>
    <string name="start_up">Start up</string>
    <string name="government">Government</string>
    <string name="non_profit">Non-profit</string>
    <string name="university">University</string>
    <string name="health_care_provider">Health care provider</string>
    <string name="a">A</string>
    <string name="architecture">Architecture</string>
    <string name="arts_and_crafts"><![CDATA[Arts & Crafts]]></string>
    <string name="automotive">Automotive</string>
    <string name="banking">Banking</string>
    <string name="b">B</string>
    <string name="company">Company</string>
    <string name="community">Community</string>
    <string name="email">Email</string>
    <string name="automobiles">Automobiles</string>
    <string name="biotechnology">Biotechnology</string>
    <string name="business_supplies_and_equipment">Business Supplies and Equipment</string>
    <string name="e">E</string>
    <string name="civic_and_social_organization">Civic and Social Organization</string>
    <string name="c">C</string>
    <string name="event_services">Event Services</string>
    <string name="f">F</string>
    <string name="fund_raising">Fund-Raising</string>
    <string name="government_relations">Government Relations</string>
    <string name="g">G</string>
    <string name="health_wellness_and_fitness">Health, Wellness and Fitness</string>
    <string name="hospital_and_healthcare"><![CDATA[Hospital & Healthcare]]></string>
    <string name="i">I</string>
    <string name="industries">Industries</string>
    <string name="information_technology_and_services">Information Technology and Services</string>
    <string name="legal_services">Legal Services</string>
    <string name="m">M</string>
    <string name="marketing_and_advertising">Marketing and Advertising</string>
    <string name="medical_devices">Medical Devices</string>
    <string name="n">N</string>
    <string name="non_profit_organization_management">Non-Profit Organization Management</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="philanthropy">Philanthropy</string>
    <string name="primary_secondary_education">Primary/Secondary Education</string>
    <string name="professional_training_and_coaching">Professional Training and Coaching</string>
    <string name="r">R</string>
    <string name="research">Research</string>
    <string name="think_tanks">Think Tanks</string>
    <string name="translation_and_localization">Translation and Localization</string>
    <string name="h">H</string>
    <string name="l">L</string>
    <string name="t">T</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="add_name">Name</string>
    <string name="add_social_media_links">Add social media links</string>
    <string name="social_media">Facebook, LinkedIn, Twitter, Github</string>
    <string name="about_me">About me</string>
    <string name="about_me_subtitle">Write a self-introduction</string>
    <string name="toolbar_edit_name">Name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="social_media_links">Social Media Links</string>
    <string name="facebook_url">Facebook URL</string>
    <string name="instagram_url">Instagram URL</string>
    <string name="linkedIn_url">LinkedIn URL</string>
    <string name="twitter_url">Twitter URL</string>
    <string name="github_url">Github URL</string>
    <string name="personal_website">Personal Website</string>
    <string name="msg_email_not_registered">Email address isn’t registered yet</string>
    <string name="msg_email_invalid">Please enter a valid email address</string>
    <string name="e_mail">E-mail</string>
    <string name="resend">Resend</string>
    <string name="reset_msg">We’ll send you an email with a recovery link</string>
    <string name="reset_password">Reset Password</string>
    <string name="content_description_back_button">This is back button</string>
    <string name="email_sent_msg">An e-mail has been sent with further instructions. Please check your inbox.</string>
    <string name="back_to_login">Back to Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_my_location">Share my location</string>
    <string name="error_empty_first_name">First name is a required field</string>
    <string name="error_empty_last_name">Last name is a required field</string>
    <string name="error_name_length">30 characters max</string>
    <string name="error_size_bio">About should have 0 to 160 chars</string>
    <string name="error_size_social">Social lnks cound not have more than 15 chars</string>
    <string name="error_facebook_valid_characters">Valid characters are: A-z 0-9 ..</string>
    <string name="name">Name</string>
    <string name="Social_links">Social Media Links</string>
    <string name="linkedin_link">linkedin.com/in/</string>
    <string name="linkedin_url">LinkedIn URL</string>
    <string name="facebook_link">facebook.com/</string>
    <string name="twitter_link">twitter.com/</string>
    <string name="Product_links">Product Links</string>
    <string name="Apple_link">itunes.apple.com/</string>
    <string name="Apple_url">Link to Apple Store</string>
    <string name="Google_link">play.google.com/</string>
    <string name="Google_url">Link to Google Play</string>
    <string name="Name">Name</string>
    <string name="Save">Save</string>
    <string name="Description">Description</string>
    <string name="Language">Language</string>
    <string name="Website">Website</string>
    <string name="Organization_Profile">Organization Profile</string>
    <string name="Organization_Logo">Organization Logo</string>
    <string name="Description_exp">Add an organization description</string>
    <string name="Website_exp">Official organization website</string>
    <string name="Language_exp">Official organization language</string>
    <string name="Socical_media_links">Add social media links</string>
    <string name="Social_exp">Facebook,Linkedin, Twitter</string>
    <string name="Add_product_link">Add product links</string>
    <string name="Product_exp">Apple Store, Google Play</string>
    <string name="Edit_profile_pic">Edit Profile Picture</string>
</resources>