<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorWhite"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/type_toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/start_up_radio_bnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layoutDirection="rtl"
            android:paddingRight="300dp"
            android:layout_marginLeft="20dp"
            android:text="@string/start_up"
            android:buttonTint="@color/fightPandemicsNeonBlue"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/company_radio_bnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:paddingRight="290dp"
            android:layout_marginLeft="20dp"
            android:text="@string/company"
            android:buttonTint="@color/fightPandemicsNeonBlue"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/community_radio_bnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:paddingRight="280dp"
            android:layout_marginLeft="20dp"
            android:text="@string/community"
            android:buttonTint="@color/fightPandemicsNeonBlue"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/government_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:paddingRight="273dp"
            android:layout_marginLeft="20dp"
            android:text="@string/government"
            android:buttonTint="@color/fightPandemicsNeonBlue"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/non_profit_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layoutDirection="rtl"
            android:paddingRight="287dp"
            android:text="@string/non_profit"
            android:buttonTint="@color/fightPandemicsNeonBlue"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/university_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:paddingRight="289dp"
            android:layout_marginLeft="20dp"
            android:text="@string/university"
            android:buttonTint="@color/fightPandemicsNeonBlue"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/health_care_provider_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:paddingRight="225dp"
            android:layout_marginLeft="20dp"
            android:text="@string/health_care_provider"
            android:buttonTint="@color/fightPandemicsNeonBlue"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:paddingRight="317dp"
            android:layout_marginLeft="20dp"
            android:buttonTint="@color/fightPandemicsNeonBlue"
            android:text="@string/other" />
    </RadioGroup>

    <Button
        android:id="@+id/donation_save_btn"
        style="@style/PrimaryButton"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:lineSpacingExtra="5.9sp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg" />


</androidx.constraintlayout.widget.ConstraintLayout>