<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorWhite"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/industry_toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/letter_A_txt"
        style="@style/AndroidNativeH216Px"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="32dp"
        android:paddingBottom="11dp"
        android:background="@drawable/gray_line_bottom"
        android:maxWidth="300dp"
        android:text="@string/a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letter_A_txt">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/architecture_radio_bnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layoutDirection="rtl"
                    android:paddingRight="240dp"
                    android:text="@string/architecture"
                    android:buttonTint="@color/fightPandemicsNeonBlue"
                    app:layout_constraintStart_toStartOf="parent"
                     />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/artAndCraft_radio_bnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layoutDirection="rtl"
                    android:paddingRight="239dp"
                    android:text="@string/arts_and_crafts"
                    android:buttonTint="@color/fightPandemicsNeonBlue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/architecture_radio_bnt" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/automotive_radio_bnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layoutDirection="rtl"
                    android:paddingRight="247dp"
                    android:text="@string/automotive"
                    android:buttonTint="@color/fightPandemicsNeonBlue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/artAndCraft_radio_bnt" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/automobiles_radio_bnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layoutDirection="rtl"
                    android:paddingRight="239dp"
                    android:text="@string/automobiles"
                    android:buttonTint="@color/fightPandemicsNeonBlue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/automotive_radio_bnt" />

    </RadioGroup>
    <TextView
        android:id="@+id/letter_B_txt"
        style="@style/AndroidNativeH216Px"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/gray_line_bottom"
        android:maxWidth="300dp"
        android:paddingBottom="11dp"
        android:text="@string/b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/banking_radio_bnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layoutDirection="rtl"
        android:paddingRight="275dp"
        android:text="@string/banking"
        android:buttonTint="@color/fightPandemicsNeonBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letter_B_txt" />

    <Button
        android:id="@+id/industry_save_btn"
        style="@style/PrimaryButton"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="235dp"
        android:lineSpacingExtra="5.9sp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banking_radio_bnt" />

</androidx.constraintlayout.widget.ConstraintLayout>