<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        style="@style/textInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:layout_marginTop="102dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:background="@color/color_background"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_resend"
        style="@style/PrimaryButton"
        android:layout_width="325dp"
        android:layout_height="54dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/button_confirm_blue_background"
        android:padding="0dp"
        android:paddingTop="15dp"
        android:paddingBottom="14dp"
        android:text="@string/resend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input_layout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_reset_msg"
        style="@style/AndroidNativeP114Px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/reset_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_resend" />

</androidx.constraintlayout.widget.ConstraintLayout>